--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,13 @@
             <version>5.8.25</version>
         </dependency>
 
+        <!--email-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.3.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
