--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,21 @@ spring:
           max-active: 8
           max-idle: 8
           min-idle: 0
+  mail:
+    host: smtp.qq.com
+    username: 1563305062@qq.com
+    password: ehqklpyegusijhig
+    protocol: smtp
+    default-encoding: utf-8
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          timeout: 5000
+
 
 server:
   port: 8080
